<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eshotroid</string>
    
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    
    <string name="welcome_title">Welcome to Eshotroid!</string>
    <string name="welcome_info">This is the first time Eshotroid is running.\n\nThis wizard will help you get started with Eshotroid.\n\nYou only need to complete this setup on the first run of the application\n\nInternet connection is needed during the setup.</string>
    <string name="welcome_start">Let\'s Start!</string>
    
    <string name="setupWizard_title">Eshotroid Setup</string>
    <string name="setupWizard_info">What would you like to do?</string>
    <string name="setupWizard_downloadBusses_info">Please wait while downloading the list of busses\u2026</string>
    <string name="setupWizard_downloadSelected">Let me pick my favorite busses, download times for them.</string>
    <string name="setupWizard_downloadSelected_info">Recommended.</string>
    <string name="setupWizard_downloadNothing">Don\'t download bus times.</string>
    <string name="setupWizard_downloadNothing_info">Bus times get downloaded when they are opened for the first time. This is not recommended if you don\'t have internet connection all the time.</string>
    <string name="setupWizard_downloadSelectedDialog_title">Pick Your Favorite Busses</string>
    <string name="setupWizard_downloadTimes_info">Please wait while downloading the times for busses you selected\u2026</string>
    <string name="setupWizard_downloadTimes_status">Downloading %1$s\u2026</string>
    <string name="setupWizard_noBusSelectedDialog_title">No Favorite Busses Are Picked</string>
    <string name="setupWizard_noBusSelectedDialog_message">You have not picked any favorite busses. If you continue, application will start without downloading any bus times.\n\nDo you really want to continue?</string>
    <string name="setupWizard_cancelDialog_title">Setup Is Not Completed</string>
    <string name="setupWizard_cancelDialog_message">In order to use the application efficiently, it is recommended that you complete the setup\n\nDo you really want to cancel?</string>
    <string name="setupWizard_start">Start!</string>
    
    <string name="help_title">How To Use Eshotroid?</string>
    <string name="help_next">Next</string>
    <string name="help_previous">Previous</string>
    <string name="help_finish">Finish</string>
    <string name="help_navigation">To change pages, swipe the page to left/right.</string>
    <string name="help_showing_times">To show the times of a bus, click on that bus in the list.</string>
    <string name="help_times">Time of the bus coming next is marked as green. If there is a wheel chair icon next to a bus time, it means that the bus coming that time is wheel chair friendly.</string>
    <string name="help_showing_remaining_time">To see the remaining time to a bus, click on the bus time.</string>
    <string name="help_searching">To search a bus, click search button and then enter your query.</string>
    <string name="help_favoriting">To add a bus to or remove a bus from the favorite busses list, click the star button next to the bus.</string>
    <string name="help_refreshing">To download again and update the content you are currently viewing, click refresh button.</string>
    <string name="help_showing_menu">To show the application menu, swipe to right from the left-most side of the screen or click the icon to the left of the title.</string>
    
    <string name="mainPages_favoriteBusses">Favorite Busses</string>
    <string name="mainPages_allBusses">All Busses</string>
    <string name="mainPages_kentKartBalance">Kent Kart Balance</string>
    
    <string name="busTimes_h">Week Days</string>
    <string name="busTimes_c">Saturday</string>
    <string name="busTimes_p">Sunday</string>
    
    <string name="menu_search">Search</string>
    <string name="menu_search_hint">Enter Number or Location</string>
    <string name="menu_refresh">Refresh</string>
    
    <string name="drawerMenu_title">Options</string>
    <string name="times_title">Times of %1$d</string>
    
    <string name="drawerMenu_rate">Rate/Comment</string>
    <string name="drawerMenu_contact">Contact Developer</string>
    <string name="drawerMenu_website">Developer\'s Website</string>
    <string name="drawerMenu_help">Help</string>
    <string name="drawerMenu_about">About</string>
    
    <string name="about_title">About Eshotroid</string>
    <string name="about_content">
        <![CDATA[
        <p>This application is developed by Mehmet Akif Tütüncü completely independent from <b>Eshot Genel Müdürlüğü</b> and <b>Kent Kart</b>.</p>
        <p>All the information about busses are downloaded from <a href="http://mobil.eshot.gov.tr">http://mobil.eshot.gov.tr</a> and all the information about Kent Kart are downloaded from <a href="http://m.kentkart.com">http://m.kentkart.com</a>. The developer does not guarantee that the information is correct and has no responsibility over the usage of the application.</p>
        <p>This application is completely free. You can use it however you like.</p>
        <p>If you are interested in the source codes of the application, you can send an e-mail about this to the developer.</p>
        <p>Please let the developer know about your opinions, suggestions and errors.</p>
        <p>Hope you never miss your bus&#8230; :)</p>
        ]]>
    </string>
    
    <string name="favoriteBusses_info">There is no favorite bus.\n\nTo add a bus to favorite busses, click on the star button next to it.</string>
    
    <string name="kentKartBalance_query">Query</string>
    <string name="kentKartBalance_newQuery">Query a New Kent Kart</string>
    <string name="kentKartBalance_existingQuery">Select a Saved Kent Kart</string>
    <string name="kentKartBalance_goBack">Go Back</string>
    <string name="kentKartBalance_info_selectKentKart">Select one of the saved Kent Karts.</string>
    <string name="kentKartBalance_info_noSavedKentKart">You don\'t have any saved Kent Kart. You can query by entering the Kent Kart number and save the queried Kent Kart.</string>
    <string name="kentKartBalance_existingQuery_delete_info">To delete a selected Kent Kart, you can click the trash button.</string>
    <string name="kentKartBalance_newQuery_info">Enter the 11 digit number on the back side of your Kent Kart to fields below.</string>
    <string name="kentKartBalance_saveKentKart_info">If you want, you can save this Kent Kart for accessing easily later.</string>
    <string name="kentKartBalance_saveKentKart_saveStatus">Save?</string>
    <string name="kentKartBalance_saveKentKart_saveName_hint">Enter a name for the Kent Kart.</string>
    <string name="kentKartBalance_balance">%1$s TL</string>
    <string name="kentKartBalance_balance_title">Card Balance</string>
    <string name="kentKartBalance_lastLoad">%2$s TL on %1$s</string>
    <string name="kentKartBalance_lastLoad_onlyTime">On %1$s</string>
    <string name="kentKartBalance_lastLoad_onlyAmount">%1$s TL</string>
    <string name="kentKartBalance_lastLoad_title">Last Load of Balance</string>
    <string name="kentKartBalance_lastUse">%2$s TL on %1$s</string>
    <string name="kentKartBalance_lastUse_onlyTime">On %1$s</string>
    <string name="kentKartBalance_lastUse_onlyAmount">%1$s TL</string>
    <string name="kentKartBalance_lastUse_title">Last Use of the Card</string>
    <string name="kentKartBalance_unknown">Unknown</string>
    
    <string name="error_noConnection">No internet connection!</string>
    <string name="error_parse">An error occurred while processing the downloaded data!</string>
    <string name="error_unknown">An unknown error occurred!</string>
    <string name="error_setupWizard_noBusses">Bus list couldn\'t be downloaded! Please make sure you are connected to internet and restart the application.</string>
    
    <string name="info_allBusses_successful">Bus list is downloaded successfully!</string>
    <string name="info_allBusses_refreshing">Downloading bus list\u2026</string>
    
    <string name="info_busTimes_successful">%2$s times of bus number %1$d are updated!</string>
    <string name="info_busTimes_refreshing">Updating %2$s times of bus number %1$d\u2026</string>
    <string name="info_busTimes_noTimes">No times were found for %2$s times of bus number %1$d!</string>
    
    <string name="info_kentKart_successful">Query is successful!</string>
    <string name="info_kentKart_refreshing">Querying %1$s\u2026</string>
    <string name="info_kentKart_saved">%1$s is saved!</string>
    <string name="info_kentKart_deleted">%1$s is deleted!</string>
    <string name="info_kentKart_invalid">Query failed! Make sure the Kent Kart number you entered is valid. If you are sure it is valid, you might have passed daily query limit.</string>
    
    <string name="info_selectedTimePassed">The time you selected is passed.</string>
    <string name="info_remainingTime">There is/are %2$d hour(s) and %3$d minute(s) to the bus at %1$s.</string>
    <string name="info_remainingTimeShort">There is/are %2$d minute(s) to the bus at %1$s.</string>

</resources>