<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UselessParent"
    android:padding="@dimen/setupWizard_padding" >

    <RelativeLayout
        android:id="@+id/relativeLayout_activitySetupWizard_downloadBusses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >
            
            <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/setupWizard_margin"
            android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setupWizard_downloadBusses_info" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_activitySetupWizard_options"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setupWizard_info"
            android:textSize="@dimen/setupWizard_title_textSize"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup_activitySetupWizard_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <RadioButton
                android:id="@+id/radioButton_activitySetupWizard_downloadSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/setupWizard_downloadSelected" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/setupWizard_margin"
                android:gravity="center"
                android:text="@string/setupWizard_downloadSelected_info"
                android:textSize="@dimen/setupWizard_options_textSize" />

            <RadioButton
                android:id="@+id/radioButton_activitySetupWizard_downloadNothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setupWizard_downloadNothing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setupWizard_downloadNothing_info"
                android:textSize="@dimen/setupWizard_options_textSize" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_activitySetupWizard_downloadTimes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setupWizard_downloadTimes_info" />

            <ProgressBar
                android:id="@+id/progressBar_activitySetupWizard_downloadTimesProgressBar"
                style="@style/ProgressBar.Eshotroid"
                android:layout_margin="@dimen/setupWizard_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <TextView
                android:id="@+id/textView_activitySetupWizard_downloadTimesStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setupWizard_downloadTimes_status" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/button_activitySetupWizard_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setupWizard_start" />

</LinearLayout>